@@ -8,7 +8,7 @@
 #                          'plot_particles'                                    # 
 # Author : Mauricio Zambrano-Bigiarini & Rodrigo Rojas                         #  
 # Started: 08-Nov-2011,                                                        #
-# Updates: 02-Feb-2012 ; 17-Feb-2012 ; 09-Mar-2012 ; 12-Nov-2012               #        
+# Updates: 02-Feb-2012 ; 17-Feb-2012 ; 09-Mar-2012 ; 12-Nov-2012 ; 19-Nov-2012 #        
 ################################################################################
 # This function plots the contents of the 'Particles.txt' ouput file of        #
 # hydroPSO, with the position and fitness value of all the particles in the    #
@@ -350,13 +350,16 @@ plot_particles <- function(#####################################################
                 params=params,
                 gofs=gofs,
                 param.names=dp3D.names,
+                MinMax=MinMax, 
+                beh.thr=beh.thr,
                 nrows=nrows,
                 gof.name=gof.name, 
                 main=main,
                 GOFcuts=GOFcuts,
                 colorRamp= colorRamp,
+                points.cex=points.cex,  
                 alpha=alpha,
-                points.cex=points.cex,               
+                #axis.rot=axis.rot,            
                 verbose=FALSE
                 ) 
     if (do.png) dev.off()
